--- a/styles/sanitize.css
+++ b/styles/sanitize.css
@@ -581,3 +581,14 @@
    clip: rect(0, 0, 0, 0);
    position: absolute;
  }
+
+
+ /* Media Queries */
+ @media screen and (min-width : 320px) and (max-width : 480px) {
+        #search-box {
+            width: 2vw;
+        }
+        html {
+            font-size: 50px;
+        }
+}
