--- a/styles/style.css
+++ b/styles/style.css
@@ -83,6 +83,7 @@ form {
     margin: auto;
     width: 38em;
     height: 3.1em;
+    max-width: 75vw;
     outline: none;
     border-radius: 50px;
     border: 1px solid rgba(0, 0, 0, 0.18);
