--- a/styles/sanitize.css
+++ b/styles/sanitize.css
@@ -584,11 +584,31 @@
 
 
  /* Media Queries */
- @media screen and (min-width : 320px) and (max-width : 480px) {
-        #search-box {
-            width: 2vw;
+ @media screen 
+    and (max-width: 420px) 
+    and (min-width: 320px) {
+        
+        .search-container {
+            width: 65vw;
+            margin-left: 90px;
         }
-        html {
-            font-size: 50px;
+
+        #nav-about, #nav-gmail {
+            display: none;
         }
-}
+
+        #google-logo {
+            padding-top: 30px;
+            width: 50vw;
+        }
+    }
+
+@media screen 
+    and (max-width: 720px)
+    and (min-width: 421px) {
+        
+        .search-container {
+            width: 70vw;
+            margin-left: 80px;
+        } 
+    }
